hot fix to make .parent work with the page size
the div containing all the portraits and related text was too big: it extended beyond the footer and the text overlapped with it as well. This is a quick fix to make everything fit as well as keeping the portraits clickable.

--- a/styles/allpages.css
+++ b/styles/allpages.css
@@ -44,6 +44,8 @@ main {
     overflow: auto;
     position: absolute;
     width: 100%;
+    transform: scale(0.95);
+    z-index: 10000;
 }
 
 .child {
